Added information about money exchange

--- a/Деньги, Финансы, Банки.md
+++ b/Деньги, Финансы, Банки.md
@@ -1,5 +1,10 @@
 # Деньги, финансы, банки
 
 ## Где можно обменять наличные гривны в Германии?
-К сожалению, это практически невозможно сделать. Официальная [рекомендация](https://bank.gov.ua/ua/news/all/natsionalniy-bank-rekomenduye-ne-vivoziti-gotivkovu-grivnyu-za-kordon-a-vnesti-yiyi-na-rahunki-v-ukrayini) от НБУ - положить деньги на счет и расплачиваться картой.
+
+К сожалению на територии Германии, это практически невозможно сделать. Официальная [рекомендация](https://bank.gov.ua/ua/news/all/natsionalniy-bank-rekomenduye-ne-vivoziti-gotivkovu-grivnyu-za-kordon-a-vnesti-yiyi-na-rahunki-v-ukrayini) от НБУ - положить деньги на счет и расплачиваться картой.
 Если уж совсем критическая ситуация - в чатах попробуйте поискать тех, кто согласится в качестве помощи поменять гривны.
+
+## Возможно ли обменять деньги в странах граничащих с Германией?
+
+Есть возможность обменять деньги в Чехии. Курс обмена сильно отличается от курса НБУ. На момент 14.03.2022 составлял 46 грн за 1 евро.
